--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         dotnet build Material.Icons -c Release /p:Platform="Any CPU"
         dotnet build Material.Icons.WPF -c Release /p:Platform="Any CPU"
         dotnet build Material.Icons.Avalonia -c Release /p:Platform="Any CPU"
-        dotnet build Material.Icons.WinUI -c Release /p:Platform="Any CPU"
+        dotnet build Material.Icons.WinUI3 -c Release /p:Platform="Any CPU"
     - name: Publish to Nuget
       run: |
         dotnet nuget push **/*.nupkg --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json --skip-duplicate
