Updates the net sdk version, remove ugly hacks for WinUI3

--- a/Material.Icons.WPF/Material.Icons.WPF.csproj
+++ b/Material.Icons.WPF/Material.Icons.WPF.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <UseWPF>true</UseWPF>
-    <TargetFrameworks>net461;netcoreapp3.1;net6.0-windows;net7.0-windows</TargetFrameworks>
+    <TargetFrameworks>net461;netcoreapp3.1;net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows</TargetFrameworks>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
@@ -18,7 +18,7 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
-    <Version>2.1.10</Version>
+    <Version>2.1.11</Version>
     <PackageReleaseNotes>- Icons set updated according to materialdesignicons.com at Thu, 20 Jun 2024 12:18:52 GMT
 Check out changes at https://pictogrammers.com/library/mdi/history/</PackageReleaseNotes>
   </PropertyGroup>
