--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,6 +13,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
+      - uses: actions/setup-dotnet@v4
+        with:
+            dotnet-version: '8.0'
       - name: Cache .nuke/temp, ~/.nuget/packages
         uses: actions/cache@v2
         with:
