--- a/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
+++ b/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
@@ -15,9 +15,8 @@
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
     <PackageTags>material icons material-design google-material avalonia</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageReleaseNotes>- Icons set updated according to materialdesignicons.com at Mon, 20 Jan 2025 12:22:08 GMT
-Check out changes at https://pictogrammers.com/library/mdi/history/</PackageReleaseNotes>
-    <Version>2.1.12</Version>
+    <PackageReleaseNotes>- Add text support for extensions. Thanks, @sn4k3</PackageReleaseNotes>
+    <Version>2.2.0</Version>
   </PropertyGroup>
   
   <ItemGroup>
