--- a/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
+++ b/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
@@ -18,9 +18,8 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
-    <Version>2.1.12</Version>
-    <PackageReleaseNotes>- Icons set updated according to materialdesignicons.com at Mon, 20 Jan 2025 12:22:08 GMT
-Check out changes at https://pictogrammers.com/library/mdi/history/</PackageReleaseNotes>
+    <Version>2.2.0</Version>
+    <PackageReleaseNotes>- Add text support for extensions. Thanks, @sn4k3</PackageReleaseNotes>
     <EnableMsixTooling>true</EnableMsixTooling>
 
     <WindowsSdkPackageVersion>10.0.22621.38</WindowsSdkPackageVersion>
