--- a/Material.Icons/Material.Icons.csproj
+++ b/Material.Icons/Material.Icons.csproj
@@ -15,9 +15,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageTags>material icons material-design google-material</PackageTags>
     <RootNamespace>Material.Icons</RootNamespace>
-    <Version>2.1.12</Version>
-    <PackageReleaseNotes>- Icons set updated according to materialdesignicons.com at Mon, 20 Jan 2025 12:22:08 GMT
-Check out changes at https://pictogrammers.com/library/mdi/history/</PackageReleaseNotes>
+    <Version>2.2.0</Version>
+    <PackageReleaseNotes>- Add text support for extensions. Thanks, @sn4k3</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
