--- a/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
+++ b/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
@@ -15,9 +15,8 @@
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
     <PackageTags>material icons material-design google-material avalonia</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageReleaseNotes>- Icons set updated according to materialdesignicons.com at Sat, 08 Mar 2025 12:16:04 GMT
-Check out changes at https://pictogrammers.com/library/mdi/history/</PackageReleaseNotes>
-    <Version>2.3.1</Version>
+    <PackageReleaseNotes>Added animations</PackageReleaseNotes>
+    <Version>2.4.0</Version>
   </PropertyGroup>
   
   <ItemGroup>
