--- a/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
+++ b/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
@@ -18,9 +18,8 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
-    <Version>2.4.1</Version>
-    <PackageReleaseNotes>- Icons set updated according to materialdesignicons.com at Sat, 08 Mar 2025 12:16:04 GMT
-Check out changes at https://pictogrammers.com/library/mdi/history/</PackageReleaseNotes>
+    <Version>3.0.0-preview1.1</Version>
+    <PackageReleaseNotes>- Implemented IconSize</PackageReleaseNotes>
     <EnableMsixTooling>true</EnableMsixTooling>
 
     <WindowsSdkPackageVersion>10.0.22621.38</WindowsSdkPackageVersion>
