--- a/Material.Icons/Material.Icons.csproj
+++ b/Material.Icons/Material.Icons.csproj
@@ -15,9 +15,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageTags>material icons material-design google-material</PackageTags>
     <RootNamespace>Material.Icons</RootNamespace>
-    <Version>2.4.1</Version>
-    <PackageReleaseNotes>- Icons set updated according to materialdesignicons.com at Sat, 08 Mar 2025 12:16:04 GMT
-Check out changes at https://pictogrammers.com/library/mdi/history/</PackageReleaseNotes>
+    <Version>3.0.0-preview1.1</Version>
+    <PackageReleaseNotes>- Implemented IconSize</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
