--- a/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
+++ b/Material.Icons.Avalonia/Material.Icons.Avalonia.csproj
@@ -15,8 +15,8 @@
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
     <PackageTags>material icons material-design google-material avalonia</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <Version>3.0.0-preview1.1</Version>
-    <PackageReleaseNotes>- Implemented IconSize</PackageReleaseNotes>
+    <Version>3.0.0-preview3.1</Version>
+    <PackageReleaseNotes>- Add cache for icons geometry</PackageReleaseNotes>
   </PropertyGroup>
   
   <ItemGroup>
