--- a/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
+++ b/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
@@ -18,8 +18,8 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
-    <Version>3.0.0-preview3.1</Version>
-    <PackageReleaseNotes>- Add cache for icons geometry</PackageReleaseNotes>
+    <Version>3.0.0-preview4</Version>
+    <PackageReleaseNotes>- Fix crash by MaterialIconTextExt pseudo-classes replication</PackageReleaseNotes>
     <EnableMsixTooling>true</EnableMsixTooling>
 
     <WindowsSdkPackageVersion>10.0.22621.38</WindowsSdkPackageVersion>
