--- a/Material.Icons.WPF/Material.Icons.WPF.csproj
+++ b/Material.Icons.WPF/Material.Icons.WPF.csproj
@@ -18,8 +18,8 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
-    <Version>3.0.0-preview5</Version>
-    <PackageReleaseNotes>- Allow Bindings under MaterialIconExt</PackageReleaseNotes>
+    <Version>3.0.0-preview6</Version>
+    <PackageReleaseNotes>- Fix Geometry Reuse Exception in Material Icons for WinUI3</PackageReleaseNotes>
   </PropertyGroup>
   
   <ItemGroup>
