--- a/Material.Icons/Material.Icons.csproj
+++ b/Material.Icons/Material.Icons.csproj
@@ -15,8 +15,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageTags>material icons material-design google-material</PackageTags>
     <RootNamespace>Material.Icons</RootNamespace>
-    <Version>3.0.0-preview5</Version>
-    <PackageReleaseNotes>- Allow Bindings under MaterialIconExt</PackageReleaseNotes>
+    <Version>3.0.0-preview6</Version>
+    <PackageReleaseNotes>- Fix Geometry Reuse Exception in Material Icons for WinUI3</PackageReleaseNotes>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
