--- a/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
+++ b/Material.Icons.WinUI3/Material.Icons.WinUI3.csproj
@@ -18,8 +18,8 @@
     <PackageTags>material icons material-design google-material wpf</PackageTags>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
-    <Version>3.0.0-preview6</Version>
-    <PackageReleaseNotes>- Fix Geometry Reuse Exception in Material Icons for WinUI3</PackageReleaseNotes>
+    <Version>3.0.0-preview7</Version>
+    <PackageReleaseNotes>- Allow Kind to be null</PackageReleaseNotes>
     <EnableMsixTooling>true</EnableMsixTooling>
 
     <WindowsSdkPackageVersion>10.0.22621.38</WindowsSdkPackageVersion>
