--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,7 +15,7 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-dotnet@v4
         with:
-            dotnet-version: '8.0'
+            dotnet-version: 10
       - name: Cache .nuke/temp, ~/.nuget/packages
         uses: actions/cache@v4
         with:
