--- a/Material.Icons.WPF.Demo/Material.Icons.WPF.Demo.csproj
+++ b/Material.Icons.WPF.Demo/Material.Icons.WPF.Demo.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net10.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
