--- a/Material.Icons.WinUI3.Demo/Material.Icons.WinUI3.Demo.csproj
+++ b/Material.Icons.WinUI3.Demo/Material.Icons.WinUI3.Demo.csproj
@@ -14,26 +14,27 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <WindowsPackageType>None</WindowsPackageType>
+    <IsPackable>false</IsPackable>
 
     <WindowsSdkPackageVersion>10.0.22621.38</WindowsSdkPackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="Assets\SplashScreen.scale-200.png"/>
+    <Content Include="Assets\LockScreenLogo.scale-200.png"/>
+    <Content Include="Assets\Square150x150Logo.scale-200.png"/>
+    <Content Include="Assets\Square44x44Logo.scale-200.png"/>
+    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png"/>
+    <Content Include="Assets\StoreLogo.png"/>
+    <Content Include="Assets\Wide310x150Logo.scale-200.png"/>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DynamicData" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
-    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.1.1" />
-    <Manifest Include="$(ApplicationManifest)" />
+    <PackageReference Include="DynamicData" Version="9.0.4"/>
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1"/>
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001"/>
+    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.1.1"/>
+    <Manifest Include="$(ApplicationManifest)"/>
   </ItemGroup>
 
   <!--
@@ -42,10 +43,10 @@
     package has not yet been restored.
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-    <ProjectCapability Include="Msix" />
+    <ProjectCapability Include="Msix"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Material.Icons.WinUI3\Material.Icons.WinUI3.csproj" />
+    <ProjectReference Include="..\Material.Icons.WinUI3\Material.Icons.WinUI3.csproj"/>
   </ItemGroup>
 
   <!--
