Update publish workflow triggers and branches

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,13 @@
 name: .NET Publish
 
 on:
-  push:
-    branches: [ master ]
+    push:
+        branches:
+            - master
+            - main
+            - release/**
+        tags:
+            - v**
 
 jobs:
   build:
