--- a/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
+++ b/Material.Icons.Avalonia.Demo/Material.Icons.Avalonia.Demo.csproj
@@ -16,12 +16,12 @@
     <AvaloniaResource Include="Assets\**"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.3.0"/>
+    <PackageReference Include="Avalonia" Version="12.0.0-preview1"/>
+    <PackageReference Include="Avalonia.Desktop" Version="12.0.0-preview1"/>
+    <PackageReference Include="Avalonia.Themes.Simple" Version="12.0.0-preview1"/>
     <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.1.5"/>
-    <PackageReference Include="Avalonia.Desktop" Version="11.3.0"/>
-    <PackageReference Include="Avalonia.Diagnostics" Version="11.3.0"/>
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.0"/>
-    <PackageReference Include="Avalonia.Themes.Simple" Version="11.3.0"/>
+    <PackageReference Include="AvaloniaUI.DiagnosticsSupport" Version="2.2.0-beta2"/>
+    <PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Material.Icons.Avalonia\Material.Icons.Avalonia.csproj"/>
